nimcuda/cublas_api.nim

                    x: ptr cuComplex; incx: cint; y: ptr cuComplex; incy: cint): cublasStatus_t {.
    cdecl, importc: "cublasCaxpy_v2", dynlib: libName.}
proc cublasCaxpy_v2_64*(handle: cublasHandle_t; n: clonglong; alpha: ptr cuComplex;
                       x: ptr cuComplex; incx: clonglong; y: ptr cuComplex;
                       incy: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCaxpy_v2_64", dynlib: libName.}
proc cublasZaxpy_v2*(handle: cublasHandle_t; n: cint; alpha: ptr cuDoubleComplex;
                    x: ptr cuDoubleComplex; incx: cint; y: ptr cuDoubleComplex;
                    incy: cint): cublasStatus_t {.cdecl, importc: "cublasZaxpy_v2",
    dynlib: libName.}
proc cublasZaxpy_v2_64*(handle: cublasHandle_t; n: clonglong;
                       alpha: ptr cuDoubleComplex; x: ptr cuDoubleComplex;
                       incx: clonglong; y: ptr cuDoubleComplex; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZaxpy_v2_64", dynlib: libName.}
proc cublasCopyEx*(handle: cublasHandle_t; n: cint; x: pointer; xType: cudaDataType;
                  incx: cint; y: pointer; yType: cudaDataType; incy: cint): cublasStatus_t {.
    cdecl, importc: "cublasCopyEx", dynlib: libName.}
proc cublasCopyEx_64*(handle: cublasHandle_t; n: clonglong; x: pointer;
                     xType: cudaDataType; incx: clonglong; y: pointer;
                     yType: cudaDataType; incy: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCopyEx_64", dynlib: libName.}
proc cublasScopy_v2*(handle: cublasHandle_t; n: cint; x: ptr cfloat; incx: cint;
                    y: ptr cfloat; incy: cint): cublasStatus_t {.cdecl,
    importc: "cublasScopy_v2", dynlib: libName.}
proc cublasScopy_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cfloat;
                       incx: clonglong; y: ptr cfloat; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasScopy_v2_64", dynlib: libName.}
proc cublasDcopy_v2*(handle: cublasHandle_t; n: cint; x: ptr cdouble; incx: cint;
                    y: ptr cdouble; incy: cint): cublasStatus_t {.cdecl,
    importc: "cublasDcopy_v2", dynlib: libName.}
proc cublasDcopy_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cdouble;
                       incx: clonglong; y: ptr cdouble; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasDcopy_v2_64", dynlib: libName.}
proc cublasCcopy_v2*(handle: cublasHandle_t; n: cint; x: ptr cuComplex; incx: cint;
                    y: ptr cuComplex; incy: cint): cublasStatus_t {.cdecl,
    importc: "cublasCcopy_v2", dynlib: libName.}
proc cublasCcopy_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cuComplex;
                       incx: clonglong; y: ptr cuComplex; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasCcopy_v2_64", dynlib: libName.}
proc cublasZcopy_v2*(handle: cublasHandle_t; n: cint; x: ptr cuDoubleComplex;
                    incx: cint; y: ptr cuDoubleComplex; incy: cint): cublasStatus_t {.
    cdecl, importc: "cublasZcopy_v2", dynlib: libName.}
proc cublasZcopy_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cuDoubleComplex;
                       incx: clonglong; y: ptr cuDoubleComplex; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZcopy_v2_64", dynlib: libName.}
proc cublasSswap_v2*(handle: cublasHandle_t; n: cint; x: ptr cfloat; incx: cint;
                    y: ptr cfloat; incy: cint): cublasStatus_t {.cdecl,
    importc: "cublasSswap_v2", dynlib: libName.}
proc cublasSswap_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cfloat;
                       incx: clonglong; y: ptr cfloat; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasSswap_v2_64", dynlib: libName.}
proc cublasDswap_v2*(handle: cublasHandle_t; n: cint; x: ptr cdouble; incx: cint;
                    y: ptr cdouble; incy: cint): cublasStatus_t {.cdecl,
    importc: "cublasDswap_v2", dynlib: libName.}
proc cublasDswap_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cdouble;
                       incx: clonglong; y: ptr cdouble; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasDswap_v2_64", dynlib: libName.}
proc cublasCswap_v2*(handle: cublasHandle_t; n: cint; x: ptr cuComplex; incx: cint;
                    y: ptr cuComplex; incy: cint): cublasStatus_t {.cdecl,
    importc: "cublasCswap_v2", dynlib: libName.}
proc cublasCswap_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cuComplex;
                       incx: clonglong; y: ptr cuComplex; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasCswap_v2_64", dynlib: libName.}
proc cublasZswap_v2*(handle: cublasHandle_t; n: cint; x: ptr cuDoubleComplex;
                    incx: cint; y: ptr cuDoubleComplex; incy: cint): cublasStatus_t {.
    cdecl, importc: "cublasZswap_v2", dynlib: libName.}
proc cublasZswap_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cuDoubleComplex;
                       incx: clonglong; y: ptr cuDoubleComplex; incy: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZswap_v2_64", dynlib: libName.}
proc cublasSwapEx*(handle: cublasHandle_t; n: cint; x: pointer; xType: cudaDataType;
                  incx: cint; y: pointer; yType: cudaDataType; incy: cint): cublasStatus_t {.
    cdecl, importc: "cublasSwapEx", dynlib: libName.}
proc cublasSwapEx_64*(handle: cublasHandle_t; n: clonglong; x: pointer;
                     xType: cudaDataType; incx: clonglong; y: pointer;
                     yType: cudaDataType; incy: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasSwapEx_64", dynlib: libName.}
proc cublasIsamax_v2*(handle: cublasHandle_t; n: cint; x: ptr cfloat; incx: cint;
                     resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIsamax_v2", dynlib: libName.}
proc cublasIsamax_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cfloat;
                        incx: clonglong; resultNotKeyWord: ptr clonglong): cublasStatus_t {.
    cdecl, importc: "cublasIsamax_v2_64", dynlib: libName.}
proc cublasIdamax_v2*(handle: cublasHandle_t; n: cint; x: ptr cdouble; incx: cint;
                     resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIdamax_v2", dynlib: libName.}
proc cublasIdamax_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cdouble;
                        incx: clonglong; resultNotKeyWord: ptr clonglong): cublasStatus_t {.
    cdecl, importc: "cublasIdamax_v2_64", dynlib: libName.}
proc cublasIcamax_v2*(handle: cublasHandle_t; n: cint; x: ptr cuComplex; incx: cint;
                     resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIcamax_v2", dynlib: libName.}
proc cublasIcamax_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cuComplex;
                        incx: clonglong; resultNotKeyWord: ptr clonglong): cublasStatus_t {.
    cdecl, importc: "cublasIcamax_v2_64", dynlib: libName.}
proc cublasIzamax_v2*(handle: cublasHandle_t; n: cint; x: ptr cuDoubleComplex;
                     incx: cint; resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIzamax_v2", dynlib: libName.}
proc cublasIzamax_v2_64*(handle: cublasHandle_t; n: clonglong;
                        x: ptr cuDoubleComplex; incx: clonglong;
                        resultNotKeyWord: ptr clonglong): cublasStatus_t {.cdecl,
    importc: "cublasIzamax_v2_64", dynlib: libName.}
proc cublasIamaxEx*(handle: cublasHandle_t; n: cint; x: pointer; xType: cudaDataType;
                   incx: cint; resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIamaxEx", dynlib: libName.}
proc cublasIamaxEx_64*(handle: cublasHandle_t; n: clonglong; x: pointer;
                      xType: cudaDataType; incx: clonglong; resultNotKeyWord: ptr clonglong): cublasStatus_t {.
    cdecl, importc: "cublasIamaxEx_64", dynlib: libName.}
proc cublasIsamin_v2*(handle: cublasHandle_t; n: cint; x: ptr cfloat; incx: cint;
                     resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIsamin_v2", dynlib: libName.}
proc cublasIsamin_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cfloat;
                        incx: clonglong; resultNotKeyWord: ptr clonglong): cublasStatus_t {.
    cdecl, importc: "cublasIsamin_v2_64", dynlib: libName.}
proc cublasIdamin_v2*(handle: cublasHandle_t; n: cint; x: ptr cdouble; incx: cint;
                     resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIdamin_v2", dynlib: libName.}
proc cublasIdamin_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cdouble;
                        incx: clonglong; resultNotKeyWord: ptr clonglong): cublasStatus_t {.
    cdecl, importc: "cublasIdamin_v2_64", dynlib: libName.}
proc cublasIcamin_v2*(handle: cublasHandle_t; n: cint; x: ptr cuComplex; incx: cint;
                     resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIcamin_v2", dynlib: libName.}
proc cublasIcamin_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cuComplex;
                        incx: clonglong; resultNotKeyWord: ptr clonglong): cublasStatus_t {.
    cdecl, importc: "cublasIcamin_v2_64", dynlib: libName.}
proc cublasIzamin_v2*(handle: cublasHandle_t; n: cint; x: ptr cuDoubleComplex;
                     incx: cint; resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIzamin_v2", dynlib: libName.}
proc cublasIzamin_v2_64*(handle: cublasHandle_t; n: clonglong;
                        x: ptr cuDoubleComplex; incx: clonglong;
                        resultNotKeyWord: ptr clonglong): cublasStatus_t {.cdecl,
    importc: "cublasIzamin_v2_64", dynlib: libName.}
proc cublasIaminEx*(handle: cublasHandle_t; n: cint; x: pointer; xType: cudaDataType;
                   incx: cint; resultNotKeyWord: ptr cint): cublasStatus_t {.cdecl,
    importc: "cublasIaminEx", dynlib: libName.}
proc cublasIaminEx_64*(handle: cublasHandle_t; n: clonglong; x: pointer;
                      xType: cudaDataType; incx: clonglong; resultNotKeyWord: ptr clonglong): cublasStatus_t {.
    cdecl, importc: "cublasIaminEx_64", dynlib: libName.}
proc cublasAsumEx*(handle: cublasHandle_t; n: cint; x: pointer; xType: cudaDataType;
                  incx: cint; resultNotKeyWord: pointer; resultType: cudaDataType;
                  executiontype: cudaDataType): cublasStatus_t {.cdecl,
    importc: "cublasAsumEx", dynlib: libName.}
proc cublasAsumEx_64*(handle: cublasHandle_t; n: clonglong; x: pointer;
                     xType: cudaDataType; incx: clonglong; resultNotKeyWord: pointer;
                     resultType: cudaDataType; executiontype: cudaDataType): cublasStatus_t {.
    cdecl, importc: "cublasAsumEx_64", dynlib: libName.}
proc cublasSasum_v2*(handle: cublasHandle_t; n: cint; x: ptr cfloat; incx: cint;
                    resultNotKeyWord: ptr cfloat): cublasStatus_t {.cdecl,
    importc: "cublasSasum_v2", dynlib: libName.}
proc cublasSasum_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cfloat;
                       incx: clonglong; resultNotKeyWord: ptr cfloat): cublasStatus_t {.cdecl,
    importc: "cublasSasum_v2_64", dynlib: libName.}
proc cublasDasum_v2*(handle: cublasHandle_t; n: cint; x: ptr cdouble; incx: cint;
                    resultNotKeyWord: ptr cdouble): cublasStatus_t {.cdecl,
    importc: "cublasDasum_v2", dynlib: libName.}
proc cublasDasum_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cdouble;
                       incx: clonglong; resultNotKeyWord: ptr cdouble): cublasStatus_t {.cdecl,
    importc: "cublasDasum_v2_64", dynlib: libName.}
proc cublasScasum_v2*(handle: cublasHandle_t; n: cint; x: ptr cuComplex; incx: cint;
                     resultNotKeyWord: ptr cfloat): cublasStatus_t {.cdecl,
    importc: "cublasScasum_v2", dynlib: libName.}
proc cublasScasum_v2_64*(handle: cublasHandle_t; n: clonglong; x: ptr cuComplex;
                        incx: clonglong; resultNotKeyWord: ptr cfloat): cublasStatus_t {.cdecl,
    importc: "cublasScasum_v2_64", dynlib: libName.}
